--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   --main-color: #20ad96;
   --greycolor: #696969;
   --bg-lightgrey: #f8f8f8;
+  --footer-text: #f5f1ed;
 }
 
 i {
@@ -358,4 +359,92 @@ header {
   font-weight: 700;
   color: var(--main-color);
   margin-bottom: 5px;
+}
+
+/*************************************
+* Section 8 / Subscribe Newsletters  *
+*************************************/
+#subscribe h2 span {
+  color: var(--main-color);
+}
+#subscribe .form-control {
+  width: 40%;
+  display: inline-block;
+}
+#subscribe .input-group-text {
+  width: 10%;
+  position: absolute;
+  right: 380px;
+  bottom: 0;
+  border: 1px solid var(--main-color);
+  background-color: var(--main-color);
+  color: whitesmoke;
+  border-radius: 0;
+  justify-content: center;
+  border-bottom-right-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+/* Shape elements */
+#subscribe .shape-elements img:nth-child(1) {
+  position: absolute;
+  top: 56px;
+  right: 17px;
+  width: 15%;
+}
+#subscribe .shape-elements img:nth-child(2) {
+  position: absolute;
+  top: 180px;
+  right: 40px;
+  width: 8%;
+}
+#subscribe .shape {
+  width: 60px;
+  height: 60px;
+  border: 8px solid var(--main-color);
+  border-radius: 50%;
+  opacity: 0.6;
+
+  position: absolute;
+  top: 150px;
+  left: 80px;
+}
+
+#footer {
+  background-color: #3f3a64;
+  color: var(--footer-text);
+  padding: 20px;
+}
+
+#footer a {
+  text-decoration: none;
+  color: var(--footer-text);
+}
+#footer ul li {
+  list-style: none;
+  padding-left: 0;
+  font-size: 0.85rem;
+  margin: 8px;
+  opacity: 0.7;
+}
+#footer .mt-40 {
+  margin-top: 47px;
+}
+#footer h6 {
+  padding-left: 5px;
+  font-size: 1.2rem;
+  color: white;
+}
+#footer p {
+  font-size: 0.85rem;
+  margin-top: 30px;
+  opacity: 0.7;
+}
+#footer i {
+  font-size: 1.5rem;
+  margin: 10px;
+  opacity: 0.7;
+}
+#footer .text-rights {
+  width: 100%;
+  opacity: 0.7;
 }
