--- a/css/style.css
+++ b/css/style.css
@@ -353,6 +353,7 @@ header {
 #our-blogs .card-img img {
   border-radius: 10px;
 }
+
 #our-blogs .card-desc h5 {
   font-size: 1.4rem;
   font-weight: 700;
@@ -459,7 +460,10 @@ header {
   opacity: 0.7;
 }
 
-/* hover */
+/*************************************
+*             Hover                  *
+*************************************/
+
 #jumbotron .btn:hover {
   color: white;
   background-color: var(--main-color);
@@ -471,8 +475,54 @@ header {
   display: block;
   display: flex;
   flex-direction: column;
-  width: 20%;
-  align-items: center;
+  width: 15%;
+  align-items: start;
   justify-content: center;
   gap: 20px;
+  margin-left: 30px;
+}
+.dropdown-menu.show li a {
+  text-decoration: none;
+  color: var(--greycolor);
+  padding-left: 40px;
+}
+.dropdown-menu.show li a:hover {
+  color: var(--main-color);
+  text-decoration: underline;
+}
+
+/* Button to Scroll top */
+#btn-back-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 50px;
+  display: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: var(--main-color);
+  border: 1px solid var(--main-color);
+}
+.link {
+  position: relative;
+}
+.link:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--main-color);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.link:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+.navhover:hover {
+  color: var(--main-color);
 }
