--- a/css/style.css
+++ b/css/style.css
@@ -449,11 +449,12 @@ header {
   opacity: 0.7;
 }
 #footer i {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   margin: 10px;
 }
 #footer i:hover {
   color: var(--main-color);
+  background-color: white;
 }
 #footer .text-rights {
   width: 100%;
